--- a/.github/workflows/m3u_Generator.yml
+++ b/.github/workflows/m3u_Generator.yml
@@ -1,35 +1,53 @@
-name: YouTube to M3U Generator
+# This is a basic workflow to help you get started with Actions
 
+name: M3U generator
+
+# Controls when the action will run. 
 on:
   schedule:
-    - cron: '0 */3 * * *' # Her 3 saatte bir otomatik çalışır
-  workflow_dispatch: # İstediğinde manuel çalıştırmanı sağlar
+    - cron: '0 0/3 * * *'
 
+  pull_request:
+    branches:
+      - main
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
+      # Runs a single command using the runners shell
+      #- name: Run a one-line script
+      #  run: echo testing!
 
-      - name: Install dependencies
-        run: pip install requests
-
-      - name: Generate M3U
+      # Runs a set of commands using the runners shell 
+      - name: config
         run: |
-          cd scripts/
-          python youtube_m3ugrabber.py > ../youtube.m3u
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
 
-      - name: Commit and Push changes
+      - name: Main
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Action"
-          git add youtube.m3u
-          git commit -m "Update YouTube M3U" || exit 0
-          git push
+          pwd
+          chmod +x autorun.sh
+          ./autorun.sh
+
+      - name: git add
+        run: |
+          git add -A
+          ls -la
+
+      - name: commit & push
+        run: |
+          git commit -m "links are updated"
+          git push -f
